# aws-code-artifact-python

./: README.md  pyproject.toml
policies/: CodeArtifactDeployer.json
shared/: requests_util.py
tests/unit/shared/: test_requests_util.py
