[tool.poetry]
name = "aws-code-artifact-python"
version = "0.0.1"
description = "AWS Code Artifact Python utilities"
authors = ["Mel Cadano <mel.cdn@outlook.ph>"]
readme = "README.md"
packages = [{ include = "shared" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "8.3.2"
pytest-cov = "5.0.0"
coverage = "7.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "==8.3.2"
pytest-cov = "==5.0.0"
coverage = "==7.6.1"
